[gd_scene load_steps=17 format=3 uid="uid://b5alugxtb238t"]

[ext_resource type="Script" uid="uid://gslnavsr0psx" path="res://gui/menu_button.gd" id="1_ce4xl"]
[ext_resource type="FontFile" uid="uid://ccdhcyg2isuc6" path="res://fonts/Arimo-Regular.ttf" id="2_oe1n5"]

[sub_resource type="Gradient" id="Gradient_ce4xl"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_425lk"]
gradient = SubResource("Gradient_ce4xl")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_ubt2c"]
offsets = PackedFloat32Array(0, 0.82, 1)
colors = PackedColorArray(0.364706, 0.819608, 0.941176, 1, 0.639216, 0.905882, 0.933333, 1, 0.929412, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ylg51"]
gradient = SubResource("Gradient_ubt2c")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_rsb8p"]
offsets = PackedFloat32Array(0, 0.47, 1)
colors = PackedColorArray(0.639216, 0.905882, 0.933333, 1, 0.929412, 1, 1, 1, 0.639216, 0.905882, 0.933333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fxyqe"]
gradient = SubResource("Gradient_rsb8p")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_fwkj4"]
colors = PackedColorArray(0.117647, 0.243137, 0.403922, 1, 0.192157, 0.513726, 0.654902, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3d41w"]
gradient = SubResource("Gradient_fwkj4")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_y8ne0"]
offsets = PackedFloat32Array(0, 0.25, 0.61, 0.77, 0.99)
colors = PackedColorArray(0.117647, 0.243137, 0.403922, 1, 0.117647, 0.329412, 0.47451, 1, 0.12549, 0.607843, 0.701961, 1, 0.129412, 0.839216, 0.890196, 1, 0.952941, 0.996078, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u4kif"]
gradient = SubResource("Gradient_y8ne0")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_hau36"]
offsets = PackedFloat32Array(0, 0.15, 0.33, 0.51, 0.7, 0.84, 1)
colors = PackedColorArray(0.117647, 0.243137, 0.403922, 1, 0.12549, 0.607843, 0.701961, 1, 0.639216, 0.905882, 0.933333, 1, 0.952941, 0.996078, 1, 1, 0.639216, 0.905882, 0.933333, 1, 0.12549, 0.670588, 0.752941, 1, 0.117647, 0.27451, 0.427451, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wvltg"]
gradient = SubResource("Gradient_hau36")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_oe1n5"]
colors = PackedColorArray(0.29, 0.29, 0.29, 1, 0.46, 0.46, 0.46, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c3334"]
gradient = SubResource("Gradient_oe1n5")
fill_to = Vector2(0, 1)

[node name="MenuButton" type="BaseButton"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 47)
layout_direction = 0
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 157.0
offset_bottom = 47.0
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 2
theme = null
theme_type_variation = &""
disabled = false
toggle_mode = false
button_pressed = false
action_mode = 1
button_mask = 1
keep_pressed_outside = false
button_group = null
shortcut = null
shortcut_feedback = true
shortcut_in_tooltip = true
script = ExtResource("1_ce4xl")
font_size = null
metadata/_custom_type_script = "uid://gslnavsr0psx"

[node name="Outline" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_425lk")
expand_mode = 1

[node name="HoverOutline" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ylg51")
expand_mode = 1

[node name="PressedOutline" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_fxyqe")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Background" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_3d41w")
expand_mode = 1

[node name="HoverBackground" type="TextureRect" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = SubResource("GradientTexture2D_u4kif")
expand_mode = 1

[node name="PressedBackground" type="TextureRect" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = SubResource("GradientTexture2D_wvltg")
expand_mode = 1

[node name="DisabledBackground" type="TextureRect" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = SubResource("GradientTexture2D_c3334")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_oe1n5")
theme_override_font_sizes/font_size = 20
text = "MenuButton"
